--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.7.0",
+    "dotenv": "^16.4.7",
     "octokit": "^4.1.2"
   },
   "devDependencies": {
